--- a/AweSomeShop.Orders.Infrastructure/AweSomeShop.Orders.Infrastructure.csproj
+++ b/AweSomeShop.Orders.Infrastructure/AweSomeShop.Orders.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Consul" Version="1.6.10.4" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
